--- a/.bowerrc
+++ b/.bowerrc
@@ -3,8 +3,8 @@
   "analytics": false,
   "color" : true,
   "storage": {
-    "packages" : "~/.bower/packages",
-    "registry" : "~/.bower/registry",
-    "links" : "~/.bower/links"
+    "packages" : ".bower/packages",
+    "registry" : ".bower/registry",
+    "links" : ".bower/links"
   }
 }
